--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Hunger</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -38,6 +38,27 @@
         <h1 class="main-title">Feeling Hungry</h1>
         <p>We have all you want just book a table.</p>
         <a href="#" class="btn btn-primary" id="food-menu">Book Table</a>
+        <div class="payment">
+          <h1 class="payTitle">Personal Information</h1>
+          <label>Name</label>
+          <input type="text" placeholder="John Doe" class="payInput" />
+          <label>Phone Number</label>
+          <input type="text" placeholder="+1 234 5678" class="payInput" />
+          <label>Address</label>
+          <input
+            type="text"
+            placeholder="Elton St 21 22-145"
+            class="payInput"
+          />
+          <h1 class="payTitle">Booking Details</h1>
+          <input type="password" class="payInput" placeholder="No of persons" />
+          <div class="cardInfo">
+            <input type="text" placeholder="Date" class="payInput sm" />
+            <input type="text" placeholder="Time" class="payInput sm" />
+          </div>
+          <button class="payButton">Book Table</button>
+          <span class="close">X</span>
+        </div>
       </div>
     </section>
     <section id="about">
@@ -232,6 +253,17 @@
             );
           } // End if
         });
+      });
+      const productButton = document.querySelector(".btn-primary");
+      const payment = document.querySelector(".payment");
+      const close = document.querySelector(".close");
+
+      productButton.addEventListener("click", () => {
+        payment.style.display = "flex";
+      });
+
+      close.addEventListener("click", () => {
+        payment.style.display = "none";
       });
     </script>
   </body>
